Karthi/src/objects/Dress__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>1.Mens Wear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Womens Wear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Kids Wear</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E mail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>1.Casuals-K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Casuals-M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Casuals-W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Westren-K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Westren-M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Westren-W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Ethnic_W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Ethnic-K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Ethnic-M</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Dress</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Dress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>